--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 file.reference.mysql-connector-java-5.1.26-bin.jar-1=C:\\Program Files (x86)\\MySQL\\MySQL Connector J\\mysql-connector-java-5.1.26-bin.jar
-user.properties.file=C:\\Users\\Asus\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
+user.properties.file=C:\\Users\\Astar\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
