--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
+file.reference.mysql-connector-java-5.1.26-bin.jar=C:\\Program Files (x86)\\MySQL\\MySQL Connector J\\mysql-connector-java-5.1.26-bin.jar
 file.reference.mysql-connector-java-5.1.26-bin.jar-1=C:\\Program Files (x86)\\MySQL\\MySQL Connector J\\mysql-connector-java-5.1.26-bin.jar
 user.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
